updated add/remove button on film and list detail to use htmx

--- a/kinorg/templates/kinorg/film_detail.html
+++ b/kinorg/templates/kinorg/film_detail.html
@@ -29,14 +29,17 @@
     <div class="available_lists">
 
     {% if to_add or to_remove %}
+
         {% if to_add %}
         <ul class="my_available_lists">
+
             {% for list_object in to_add %}
-                <li class="available_list_item">
+
+                <li class="available_list_item" id="list_add_form_container_{{ forloop.counter }}">
                 	<a href="{% url 'kinorg:list' list_object.3 %}">
                         <span>{{list_object.0}}</span>
                     </a>
-                	<form method="POST" action="/add-film/">
+                	<form method="POST" action="/add-film/" hx-post="/add-film/" hx-target="#list_add_form_container_{{ forloop.counter }}" hx-swap="innerHTML">
                 		{% csrf_token %}
                 		<input type="hidden" id="list_id" name="list_id" value="{{ list_object.1 }}">
 						<input type="hidden" id="title" name="title" value="{{ film.title }}">
@@ -47,17 +50,22 @@
         				<button type="submit">add to list</button>
     				</form>
                 </li>
+
             {% endfor %}
+
         </ul>
         {% endif %}
+
         {% if to_remove %}
         <ul class="my_available_lists">
+
             {% for list_object in to_remove %}
-                <li class="available_list_item">
+
+                <li class="available_list_item" id="list_remove_form_container_{{ forloop.counter }}">
                     <a href="{% url 'kinorg:list' list_object.3 %}">
                         <span>{{list_object.0}}</span>
                     </a>
-                    <form method="POST" action="/remove-film/">
+                    <form method="POST" action="/remove-film/" hx-post="/remove-film/" hx-target="#list_remove_form_container_{{ forloop.counter }}" hx-swap="innerHTML">
                         {% csrf_token %}
                         <input type="hidden" id="list_id" name="list_id" value="{{ list_object.1 }}">
                         <input type="hidden" id="movie_id" name="movie_id" value="{{ film.id }}">
@@ -65,9 +73,12 @@
                         <button type="submit">remove from list</button>
                     </form>
                 </li>
+
             {% endfor %}
+
         </ul>
         {% endif %}
+
     {% endif %}
 
     {% if to_add_g or to_remove_g %}
