updated lists to show film posters, updated django

--- a/kinorg/static/kinorg/css/my_lists.css
+++ b/kinorg/static/kinorg/css/my_lists.css
@@ -42,6 +42,15 @@
     gap: 10px;
 }
 
+.list_poster_stack {
+    display: flex;
+    flex-direction: row;
+}
+
+.stack_item {
+  margin-left: -20px;
+}
+
 .invitations_container {
     grid-row: 3;
     display: flex;
