--- a/kinorg/templates/kinorg/filmlist_list.html
+++ b/kinorg/templates/kinorg/filmlist_list.html
@@ -22,7 +22,22 @@
             {% for list in my_lists %}
 
                 <li>
+
+                {% if list.addition_set.all|length > 0 %}
+                    <ul class="list_poster_stack">
+                        {% for addition in list.addition_set.all %}
+                            <li class="stack_item">
+                                <img class="poster" src="{{config_data.secure_base_url}}w200{{addition.film.poster_path}}">
+                            <li>
+                        {% endfor %}
+                    </ul>
+
+                {% else %}
+                    <img class="poster" src="{% static 'images/placeholder.jpg' %}">
+                {% endif %}
+
                 <a href="{% url 'kinorg:list' list.sqid  %}"><button>{{ list.title }}</button></a>
+
                 </li>
 
             {% endfor %}
@@ -40,6 +55,20 @@
             {% for glist in guest_lists %}
 
                 <li class="list_item">
+
+                    {% if glist.addition_set.all|length > 0 %}
+                        <ul class="list_poster_stack">
+                            {% for addition in glist.addition_set.all %}
+                                <li class="stack_item">
+                                    <img class="poster" src="{{config_data.secure_base_url}}w200{{addition.film.poster_path}}">
+                                <li>
+                            {% endfor %}
+                        </ul>
+
+                    {% else %}
+                        <img class="poster" src="{% static 'images/placeholder.jpg' %}">
+                    {% endif %}
+
                     <a href="{% url 'kinorg:list' glist.sqid  %}"><button>{{ glist.title }}</button></a>
                     <div>List created by {{ glist.owner }}</div>
                 </li>
